[project]
name = "TelegramCradograd"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Nikonorov",email = "maximnikonorov957@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
telebot = "^0.0.5"

